# adventure

./: .clang-format  .gitignore  CMakeLists.txt  CMakeUserPresets.json  README.md  TODO.md  conanfile.py  postbuild-hook.sh
cmake/: LibDeploy.cmake
game/: example.tscn  log.txt  project.godot
game/art/: icon.aseprite  icon.png.import  meme_boy.png.import
game/art/GunsPack/Bullets/: PistolAmmoBig.png.import  PistolAmmoSmall.png.import  RifleAmmoBig.png.import  RifleAmmoSmall.png.import  ShotgunShellBig.png.import  ShotgunShellSmall.png.import
game/art/GunsPack/Guns/: AK47.aseprite  AK47.png.import  Luger.png.import  M15.png.import  M24.png.import  M92.png.import  MP5.png.import  Revolver.png.import  SawedOffShotgun.png.import
game/art/Player/: dead_tomato_animations.aseprite  dead_tomato_idle.png.import  dead_tomato_sprites.png.import  dead_tomato_walking_left.png.import  dead_tomato_walking_left_backwards.png.import  dead_tomato_walking_right.png.import  dead_tomato_walking_right_backwards.png.import  donuts.aseprite  meme_boy.aseprite  meme_boy.png.import
game/art/Soldier_1/: Attack.png.import  Dead.png.import  Explosion.png.import  Grenade.png.import  Hurt.png.import  Idle.png.import  Recharge.png.import  Run.png.import  Shot_1.png.import  Shot_2.png.import  Walk.png.import
game/art/Soldier_2/: Attack.png.import  Dead.png.import  Grenade.png.import  Hurt.png.import  Idle.png.import  Recharge.png.import  Run.png.import  Shot_1.png.import  Shot_2.png.import  Walk.png.import
game/art/Soldier_3/: Attacck.png.import  Dead.png.import  Grenade.png.import  Hurt.png.import  Idle.png.import  Recharge.png.import  Run.png.import  Shot_1.png.import  Shot_2.png.import  Smoke.png.import  Walk.png.import
game/art/player/: dead_tomato_idle.png.import  dead_tomato_sprites.aseprite  dead_tomato_walking_left.png.import  dead_tomato_walking_left_backwards.png.import  dead_tomato_walking_right.png.import  dead_tomato_walking_right_backwards.png.import  donuts.aseprite
game/art/player/guns/: AK47.png.import  Luger.png.import  M15.png.import  M24.png.import  M92.png.import  MP5.png.import  Revolver.png.import  (+1 more)
game/resources/: ak_47.tscn
scripts/: build.py  gdextension.py  manifest.py
src/: CMakeLists.txt  base.cpp  base.hpp  exlib_base.hpp  macros.hpp  register_types.cpp
src/Arms/: arms.cpp  arms.hpp
src/Player/: player.cpp  player.hpp
src/Weapons/: ak47.cpp  weapon.hpp
src/arms/: CMakeLists.txt  arms.cpp  arms.hpp
src/common/: CMakeLists.txt  initializer.cpp  initializer.hpp  nodes.cpp  nodes.hpp
src/example/: example.cpp  example.hpp
src/player/: CMakeLists.txt  arms.cpp  arms.hpp  player.cpp  player.hpp
src/player/weapons/: ak47.cpp  weapon.cpp
src/weapons/: CMakeLists.txt
(+6 files in other folders)
